@@ -2,6 +2,16 @@
 
 	Resynced with GNU Classpath.
 	
+	2005-02-18  Robert Schuster <thebohemian@gmx.net>
+
+	* java/nio/charset/Charset.java (forName): Throws
+	IllegalArgumentException when argument is null
+	and added documentation.
+	
+2005-02-19  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+	
 	2005-02-17  Mark Wielaard  <mark@klomp.org>
 
 	* java/util/SimpleTimeZone.java (checkRule): Throw
